blastoff.css
/* ... */
/* Inputs */
.multi-input .input:not(.button) {
  border: 1px solid #8395a7;
  background: #ffffff;
  text-decoration: none;
  color: #576574 !important;
  font-size: .8rem; }

.multi-input .input:focus {
  outline: none; }

/* Actually Usefull Things */
.multi-input {
  height: min-content;
  white-space: nowrap; }

.multi-input .input {
  padding: 9px 18px;
  border-radius: 0px;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  margin: -2px; }

.multi-input > .input:first-child {
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px; }

.multi-input > .input:last-child {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px; }

/* Automatically snaps to bottom of screen */
main {
  flex: 1 0 auto; }

footer.footer {
  background-color: #f9f9f9;
  width: 100%;
  padding-top: 10px;
  overflow: hidden; }

footer.footer.material {
  -webkit-box-shadow: 0px -5px 9px 0px rgba(30, 30, 30, 0.33);
  -moz-box-shadow: 0px -5px 9px 0px rgba(30, 30, 30, 0.33);
  box-shadow: 0px -5px 9px 0px rgba(30, 30, 30, 0.33); }

footer.footer.material.inner {
  -webkit-box-shadow: inset 0px 10px 5px -8px rgba(0, 0, 0, 0.33);
  -moz-box-shadow: inset 0px 10px 5px -8px rgba(0, 0, 0, 0.33);
  box-shadow: inset 0px 10px 5px -8px rgba(0, 0, 0, 0.33); }

.footer.white {
  background-color: #fff; }

/* Helpers */
.nospacing {
  line-height: 18px; }

.fullwidth {
  width: 100%; }

/*# sourceMappingURL=blastoff.css.map */

